--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      CORS_ALLOW_ORIGIN: 'http://localhost:3000,http://127.0.0.1:3000,http://localhost:8080,http://127.0.0.1:8080'
+      CORS_ALLOW_ORIGIN: 'http://localhost:3000,http://localhost:8080'
     depends_on:
       - memcached
     volumes:
